--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1>Coming soon... Le Wagon</h1>
 		<p>adding direction to the bootcamp</p>
+		<p>test paragraph 2</p>p>
 	</body>
 	</html>
